# Mole

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  my_controllers.yaml
description/: robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py  navigation_launch.py  rsp.launch.py
mole/: CMakeLists.txt  package.xml
mole/config/: nav2_params.yaml
mole/launch/: localization_launch.py  rsp.launch.py
mole_hardware_interface/: CMakeLists.txt  mole_hardware_interface.xml  package.xml
mole_hardware_interface/hardware/: mole_diff_system.cpp
mole_hardware_interface/hardware/include/mole_hardware_interface/: mole_diff_system.hpp
mole_hardware_interface/hardware/include/mole_hardware_interface/serial/: arduino_comm.hpp  hardware_msgs.hpp  libserial_serialport.hpp  mock_serialport.hpp  serialport_iface.hpp
mole_microcontroller/: platformio.ini
mole_microcontroller/include/: hardware_msgs.hpp
mole_microcontroller/src/: main.cpp
mole_microcontroller/src/tests/: arduino_comm.test.cpp
mole_ws/src/mole/: CMakeLists.txt
mole_ws/src/mole/config/: view_robot.rviz
mole_ws/src/mole/description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
mole_ws/src/mole/launch/: online_async_launch.py
mole_ws/src/mole_hardware_interface/: CMakeLists.txt  package.xml
mole_ws/src/mole_hardware_interface/hardware/: mole_diff_system.cpp
mole_ws/src/mole_hardware_interface/hardware/include/mole_hardware_interface/: mole_diff_system.hpp  visibility_control.h  wheel.hpp
mole_ws/src/mole_hardware_interface/hardware/include/mole_hardware_interface/serial/: arduino_comm.hpp  serialport_iface.hpp
mole_ws/src/mole_hardware_interface/test/: arduino_comm.test.cpp
